--- a/MusicApplication/MusicApplication.Data/MusicApplication.Data.csproj
+++ b/MusicApplication/MusicApplication.Data/MusicApplication.Data.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="Album.cs" />
     <Compile Include="Artist.cs" />
+    <Compile Include="Concert.cs" />
+    <Compile Include="Playlist.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Song.cs" />
   </ItemGroup>
