Allow forms to open an item on click
When clicking on a particular Album, Artist, etc, it opens the correct form to display that object. I had to implement the INotifyPropertyChanged interface in the model and override the ToString method in the Data classes. Also, I refactored the naming convention in the Data classes to be consistent

--- a/MusicApplication/MusicApplication/MusicApplication.csproj
+++ b/MusicApplication/MusicApplication/MusicApplication.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComboBoxItem.cs" />
+    <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\SearchSongModel.cs" />
     <Compile Include="Models\SearchAlbumModel.cs" />
     <Compile Include="Models\SearchArtistModel.cs" />
@@ -150,7 +151,6 @@
     <None Include="Properties\DataSources\AlbumModel.datasource" />
     <None Include="Properties\DataSources\SearchAlbumModel.datasource" />
     <None Include="Properties\DataSources\SearchArtistModel.datasource" />
-    <None Include="Properties\DataSources\SearchModel.datasource" />
     <None Include="Properties\DataSources\SearchModel`1[].datasource" />
     <None Include="Properties\DataSources\SearchModel`1[]1.datasource" />
     <None Include="Properties\DataSources\SearchSongModel.datasource" />
