--- a/MusicApplication/MusicApplication/MusicApplication.csproj
+++ b/MusicApplication/MusicApplication/MusicApplication.csproj
@@ -67,11 +67,18 @@
   <ItemGroup>
     <Compile Include="ComboBoxItem.cs" />
     <Compile Include="Models\BaseModel.cs" />
+    <Compile Include="Models\PlaylistModel.cs" />
     <Compile Include="Models\SearchSongModel.cs" />
     <Compile Include="Models\SearchAlbumModel.cs" />
     <Compile Include="Models\SearchArtistModel.cs" />
     <Compile Include="Models\SongModel.cs" />
     <Compile Include="Models\AlbumModel.cs" />
+    <Compile Include="NameEntryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NameEntryForm.Designer.cs">
+      <DependentUpon>NameEntryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SearchQuery.cs" />
     <Compile Include="Views\AlbumForm.cs">
       <SubType>UserControl</SubType>
@@ -117,6 +124,9 @@
     <Compile Include="Views\UserControl1.Designer.cs">
       <DependentUpon>PlaylistForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="NameEntryForm.resx">
+      <DependentUpon>NameEntryForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\AlbumForm.resx">
       <DependentUpon>AlbumForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -140,6 +150,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Views\PlaylistForm.resx">
       <DependentUpon>PlaylistForm.cs</DependentUpon>
@@ -149,6 +160,7 @@
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\AlbumModel.datasource" />
+    <None Include="Properties\DataSources\PlaylistModel.datasource" />
     <None Include="Properties\DataSources\SearchAlbumModel.datasource" />
     <None Include="Properties\DataSources\SearchArtistModel.datasource" />
     <None Include="Properties\DataSources\SearchModel`1[].datasource" />
@@ -172,6 +184,10 @@
     <ProjectReference Include="..\MusicApplication.Data\MusicApplication.Data.csproj">
       <Project>{9118557F-EFDB-4A79-9269-47B6D3FEB99D}</Project>
       <Name>MusicApplication.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QueryManager\QueryManager.csproj">
+      <Project>{3972E275-5681-4E82-8EEE-11C324E9255C}</Project>
+      <Name>QueryManager</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
