--- a/MusicApplication/QueryManager/packages.config
+++ b/MusicApplication/QueryManager/packages.config
@@ -8,4 +8,7 @@
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net461" />
+  <package id="System.Security.Permissions" version="4.7.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net461" />
 </packages>
